<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Administrator"
                    android:textStyle="bold"
                    android:textSize="25sp"/>
                <Button
                    android:id="@+id/viewEventsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Events"/>
                <Button
                    android:id="@+id/viewProfilesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Profiles"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>