...
            android:id="@+id/adminRemoveQRButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Remove QR"/>
        <Button
            android:id="@+id/adminRemoveEventPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Remove Event Poster"/>
    </LinearLayout>
</LinearLayout>
