...
                <Button
                    android:id="@+id/adminDeleteProfileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete profile"/>
                <Button
                    android:id="@+id/adminRemoveProfilePictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remove profile picture"/>
                <Button
                    android:id="@+id/adminRemoveFacilityButton"
                    android:layout_width="wrap_content"
...
